BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Segmentation_Calc_Param_Master_BMS_CN__c.object
<CustomObject>
    <description>Segmentation Calc Parameter Master</description>
    <fields>
        <fullName>BU_BMS_CN__c</fullName>
        <description>BU</description>
        <label>BU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_BMS_CN__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_BMS_CN__c</fullName>
        <label>Products</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_BMS_CN__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weight</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Segmentation Calc Parameter Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BU_BMS_CN__c</columns>
        <columns>Products_BMS_CN__c</columns>
        <columns>Description_BMS_CN__c</columns>
        <columns>Type_BMS_CN__c</columns>
        <columns>Weight_BMS_CN__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Segmentation Calc Parameter Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Calc Parameter Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>